Refactoring for 2022